# My_Linux_PC

./: README.md
C_Language/Advance_C/2D Arrays/: 1_Sales.c  2_Transpose.c  2dArraySorting.c  3_matrix_ADD_SUB.c  4_Matric_Mult.c  5_Search_element.c  6_names.c  Questions.txt
C_Language/Advance_C/DMA/: 1_Integer_DMA.c  2_String_DMA.c  3_String_cpy.c  4_Sorting.c  5_IotA.c  6_Concat.c  7_strrpl2.c  8_array.c  Questions.txt  tempCodeRunnerFile.c
C_Language/Advance_C/Data Structures/: prac1.c  prac2.c  prac3.c  prac4.c
C_Language/Advance_C/Function Pointers/: 1.c  2.c  3.c  4.c  5.c  6.c  Questions.txt
C_Language/Advance_C/PointerConstants/: Constant_to_a_pointer.c  pointer_constant.c
C_Language/Advance_C/Pointers/: 1.c  10.c  11.c  12.c  3.c  4.c  5.c  6.c  7.c  8_strrev.c  9_strcat.c  Questions.txt  Sizeof_function.c  tempCodeRunnerFile.c
C_Language/Advance_C/Test/: FPTest.c  Test2.c  t3.c  test.c  test1.c
C_Language/Basic_C/: Fibanocci.c  prime.c  prime2.c
C_Language/Basic_C/Arrays/: ArrayCompare.c  AverageMarks.c  BigRep.c  BigSmall_3.c  Binery_formate.c  Chararray_2.c  Exp.c  Questions.txt  Reverse.c  ReverseType2.c  SwapArrays.c  TestingArrays_4.c  dspIndex_6.c  negTopos.c  numbers_1.c  variableSize_5.c
C_Language/Basic_C/Basics/: AllVariables.c  Allesq.c  AreaOfCircle.c  AreaOfRectangle.c  AreaOfSqare.c  Avg_of_four_int.c  CostPrice.c  EscSeqDiff.c  IntToChar.c  PrintfSeq_1.c  Questions.txt  SimpleInterest.c  SkipChar.c  Test.c  charToInt.c  escSq.c
C_Language/Basic_C/Bitwise/: 1.c  2.c
C_Language/Basic_C/Logical Operators/: 10.c  11.c  12.c  4.c  5.c  6.c  7.c  8.c  9.c  Questions.txt
C_Language/Basic_C/Nested_if/: 1.c  10.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  Questions.txt  tempCodeRunnerFile.c
C_Language/Basic_C/Pointers/: 1.c  ArrayPointer_9.c  BiggestOfThree_7.c  HigestAscii_3.c  Indirect_4.c  SizeofPtrVar_6.c  Test.c  VarRotation_8.c  VariableChanging_5.c  pointerAdd_2.c  tempCodeRunnerFile.c
C_Language/Basic_C/Preprocessor/: 4.c  Array_5.c  BiggestOf4_2.c  Time.c  alphanumeric_3.c
C_Language/Basic_C/Special Operators/: 1.c  2.c  3.c  4.c  Questions.txt
C_Language/Basic_C/StorageClasses/: Questions.txt  (+4 more)
C_Language/Practice/: Pattern1.c  tempCodeRunnerFile.c
Cpp_Programming/1_Basics/: 1.cpp  Ex1.cc  ref_variable.cc
MY_ROS_WS/install/: local_setup.sh  setup.sh
MY_ROS_WS/log/: latest_build
MY_ROS_WS/src/my_cpp_pkg/: CMakeLists.txt  readme.txt
MY_ROS_WS/src/my_cpp_pkg/src/: Hrdstat_pub.cpp  Hrdstat_sub.cpp  my_1st_node.cpp  my_cpp_oop_node.cpp
MY_ROS_WS/src/my_cpp_pkg/src/Activity_0001/: Act_Pub.cpp  Act_Sub.cpp
MY_ROS_WS/src/my_cpp_pkg/src/Activity_0004/: Battery_node.cpp  LED_Panel_node.cpp
MY_ROS_WS/src/my_cpp_pkg/src/Parameters/: Act_Pub.cpp  Act_Sub.cpp
MY_ROS_WS/src/my_cpp_pkg/src/PubSub/: Publisher_Robot_Station1.cpp  Subscriber_Robot_Station1.cpp
MY_ROS_WS/src/my_cpp_pkg/src/Services/: Two_int_Server.cpp  cli_no_oop.cpp  cli_oop.cpp  test.cpp
(+277 files in other folders)
